Revision history for Perl extension DBIx::Skinny

0.0703
   2010-03-XX
        - FIXED: DBD::* bulk_insert txn (report Makamaka Hannyaharamitu)

0.0702
   2010-03-08
        - FIXED: DBD::mysql bulk_insert profiler bug. (thanks Makamaka Hannyaharamitu)
        - FIXED: Makefile.PL require Test::More 0.94 (thanks metaperl)
        - MOD: more readable error message. (thanks tokuhirom)

0.0701
   2010-03-05
        - MOD: _execute call profiler (thanks Makamaka Hannyaharamitu)

0.07
   2010-03-05
        - FIXED: schema_info is not exist case. (thanks walf443)
        - FIXED: row class syntax error case. (report by cho45)
        - MOD: no depends Test::Declare.
        - MOD: update/upate_by_sql/delete/delete_by_sql use _execute method (thanks magicalhat)

0.06
   2010-02-07
        - FIXED: _guess_table_name bug.
        - MOD: utf8_on/utf8_off speed up. (thanks tokuhirom)
        - MOD: direct call caller. (thanks yappo)
        - FIXED: dbd exception (thanks tokuhirom/walf443)
        - FIXED: (connecton|do) error handling (thanks walf443)
        - ADD: some documents
        - MOD: specific your query profiler (thanks walf443)
        - FIXED: error processing when Schema.pm doesn't exist (thanks walf443)
        - MOD: it came to be able to define original Row.pm

0.05
   2009-12-21
        - FIXED: quote col (thanks noblejasper/fujiwara).
                  (table etc no not yet.)
        - FIXED: fetchrow_hashref('NAME_lc') for Oracle. (thanks Tomoyuki Misonou)
        - ADD: Oracle support (thanks Tomoyuki Misonou)
        - FIXED: set_dbh method bug. (report thanks walf443)
        - FIXED: Row::set method using deflate data. (thanks nekoya)
        - ADD: install_common_trigger method for DBIx::Skinny::Schema (thanks nekoya)

0.04
   2009-10-01
        - FIXED: avoid warning, in case of binds contains undef by Profiler.pm (thanks nekoya)
        - FIXED: pod typo (thanks nekoya/yusukebe/fujiwara)
        - MOD: Hide from pause by sample code.