@@ -3,6 +3,7 @@ Revision history for Perl extension DBIx::Skinny
 0.0703
    2010-03-XX
         - FIXED: DBD::* bulk_insert txn (report Makamaka Hannyaharamitu)
+        - MOD: support multi pk (thanks Makamaka Hannyaharamitu)
 
 0.0702
    2010-03-08
